# dashboard-alert-migration

./: .gitattributes  .gitignore  .gitmodules  README.md  config.yml  serverless_creds.env.example  track.yml
mig-to-kbn/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE.txt  README.md  REMAINING-ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  datadog_creds.env.example  gitleaks.toml  grafana_creds.env.example  pyproject.toml  requirements.txt  serverless_creds.env.example
mig-to-kbn/.github/: pull_request_template.md
mig-to-kbn/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  stability.yml
mig-to-kbn/.github/workflows/: auto-link-stability.yml  license-check.yml  release.yml  secrets-scan.yml  tests.yml
mig-to-kbn/docs/: README.md  architecture.md  command-contract.md  local-otlp-validation.md  pipeline-trace.md  pipeline-trace.tpl.md
mig-to-kbn/docs/architecture/: asset-model.md  tooling-matrix.md
mig-to-kbn/docs/contributing/: add-asset-type.md  add-source.md  import-paths.md
mig-to-kbn/docs/dashboards/: README.md  schema.json  schema.toon
mig-to-kbn/docs/licenses/: dependencies.md  sbom.cdx.json
mig-to-kbn/docs/roadmap/: alert-migration-next-steps.md
mig-to-kbn/docs/sources/: datadog-trace.md  datadog-trace.tpl.md  datadog.md  grafana-trace.md  grafana-trace.tpl.md  grafana.md
mig-to-kbn/docs/targets/: kibana-alert-migration-blockers-external.md  kibana-alert-migration-blockers.md  kibana-esql-capabilities.md  kibana-esql-upgrade-matrix.md  kibana.md  roadmap.md
mig-to-kbn/examples/: README.md  corpus-profile.example.yaml  datadog-field-profile.example.yaml  plugin_example.py  rule-pack.example.yaml
mig-to-kbn/examples/alerting/: README.md
mig-to-kbn/examples/cue/: datadog-field-profile.cue  grafana-rule-pack.cue
mig-to-kbn/infra/: README.md  docker-compose.yml
mig-to-kbn/infra/alloy/: config.alloy
mig-to-kbn/infra/loki/: loki.yml
mig-to-kbn/infra/nginx/: nginx.conf
mig-to-kbn/infra/otel/: otel-collector.yml
mig-to-kbn/infra/prometheus/: prometheus.yml
mig-to-kbn/infra/promtail/: promtail.yml
mig-to-kbn/observability_migration/: __init__.py  __main__.py
mig-to-kbn/observability_migration/adapters/: __init__.py
mig-to-kbn/observability_migration/app/: __init__.py  cli.py
mig-to-kbn/observability_migration/core/: __init__.py  cli_contract.py  http.py  mapping.py  sample_data.py  selection.py  telemetry_contract.py  telemetry_data.py
mig-to-kbn/observability_migration/sample_dashboards/: __init__.py  catalog.py
mig-to-kbn/observability_migration/targets/: __init__.py
mig-to-kbn/parity-rig/: .gitignore  README.md  RESULTS.md  docker-compose.yml  run-all-parity.sh  upload-all.sh
mig-to-kbn/parity-rig/benchmark/: corpus.manifest.yaml
mig-to-kbn/parity-rig/datadog/: README.md
mig-to-kbn/parity-rig/harness/: parity.py
mig-to-kbn/parity-rig/producer/: Dockerfile  app.py
mig-to-kbn/parity-rig/prometheus/: entrypoint.sh  prometheus.yml
mig-to-kbn/parity-rig/scripts/: prepare-dashboards.sh
mig-to-kbn/parity-rig/verifier/: README.md  __init__.py  bootstrap.sh  classifier.py  cli.py  collectors.py  compare.py  records.py  verify.py  visual_diff.py  visual_regression.py  walker.py
mig-to-kbn/scripts/: README.md  audit_migrated_rules.py  audit_pipeline.py  benchmark_corpus.py  check_licenses.py  check_local_paths.py  check_skill_mirror.py  check_skill_structure.py  check_source_headers.py  create_grafana_test_alerts.py  extract_dashboard_metrics.py  fetch_benchmark_corpus.py  full_local_demo.sh  generate_alert_support_report.py  generate_dashboard_schema.sh  generate_routing_artifacts.py  generate_telemetry_contract.py  lens_reconstruct.py  parity_promql_esql_oracle.py  provision_local_kibana_data_views.sh  run_datadog_demo.sh  run_datadog_parity.py  run_datadog_parity.sh  run_e2e_datadog.sh  run_e2e_grafana.sh  run_migration.sh  run_parity_native_profile.sh  run_seed_data.sh  setup_datadog_serverless_data.py  setup_serverless_data.py  setup_telemetry_data.py  start_local_lab.sh  stop_local_lab.sh  validate_dashboard_layout.py  validate_dashboard_yaml.sh  validate_esql_function_semantics.py  validate_panel_queries.py  validate_panels_from_yaml.py  validate_promql_esql_translations.py  verify_alert_rule_uploads.py
mig-to-kbn/tests/: conftest.py  test_alert_migration.py  test_app_cli.py  test_app_cli_skill_commands.py  test_audit_migrated_rules_script.py  test_audit_pipeline.py  test_check_licenses_script.py  test_check_skill_mirror.py  test_cli_contract_matrix.py  test_command_contract_doc.py  test_create_grafana_test_alerts_script.py  test_datadog_dashboard_selection.py  test_datadog_demo_script.py  test_datadog_esql_snapshots.py  test_datadog_migrate.py  test_datadog_monitor_seed.py  test_datadog_monitor_selection.py  test_datadog_report.py  test_datadog_selection_metadata.py  test_datadog_test_plan.py  test_datadog_tls.py  test_datadog_yaml_generation.py  test_feature_gap_integration.py  test_generate_corpus.py  test_generate_routing_artifacts_script.py  test_generate_telemetry_contract_script.py  test_grafana_alert_selection.py  test_grafana_cli_smoke_parity.py  test_grafana_contract_evaluator.py  test_grafana_dashboard_selection.py  test_grafana_extended.py  test_grafana_extract.py  test_grafana_preflight.py  test_grafana_selection_metadata.py  test_grafana_semantic_planner.py  test_grafana_tls_threading.py  test_grafana_yaml_generation.py  test_kibana_tls_threading.py  test_lens_reconstruct.py  test_local_ai.py  (+27 more)
mig-to-kbn/tests/core/: test_comparators.py  test_datadog_parser_fuzz.py  test_extension_examples.py  test_extension_validation.py  test_field_capabilities.py  test_http_tls.py  test_interfaces.py  test_parity_oracle.py
mig-to-kbn/tests/e2e/: test_adapter_import_parity.py  test_datadog_new_fixture_smoke.py  test_datadog_semantic_accuracy.py  test_real_dashboard_pipelines.py
mig-to-kbn/tests/fixtures/: __init__.py  sample_panels.py
mig-to-kbn/tests/targets/: test_serverless.py
(+494 files in other folders)
